--- a/DENG-AI.ipynb
+++ b/DENG-AI.ipynb
@@ -1439,6 +1439,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log-reg 0.14583333333333334\n",
+      "SVM 0.07916666666666666\n",
+      "Random Forest 0.37916666666666665\n",
+      "Decision Tree 0.9208333333333333\n",
+      "Stochastic Gradient Descent 0.025\n",
+      "Linear SVC 0.03333333333333333\n",
+      "Perceptron 0.008333333333333333\n",
+      "Gaussian Naive Bayes 0.9166666666666666\n",
+      "K-NN 0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define target variable \n",
+    "full_data = pd.read_csv('dengue_features_train.csv')\n",
+    "\n",
+    "\n",
+    "full_data = full_data.replace(r'^\\s+$', np.nan, regex=True)\n",
+    "full_data = full_data.dropna()\n",
+    "full_data = full_data.replace('sj', 0)\n",
+    "full_data = full_data.replace('iq', 1)\n",
+    "full_data = full_data.drop('week_start_date', 1)\n",
+    "y = full_data['total_cases']\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(full_data, y, test_size = 0.2)\n",
+    "\n",
+    "# Logistic Regression\n",
+    "logreg = LogisticRegression()\n",
+    "logreg.fit(X_train, Y_train)\n",
+    "Y_pred = logreg.predict(X_test)\n",
+    "acc_log = accuracy_score(Y_test, Y_pred)\n",
+    "print (\"Log-reg\", acc_log)\n",
+    "\n",
+    "\n",
+    "# Support Vector Machines\n",
+    "svc = SVC()\n",
+    "svc.fit(X_train, Y_train)\n",
+    "Y_pred = svc.predict(X_test)\n",
+    "acc_svc = accuracy_score(Y_test, Y_pred)\n",
+    "print (\"SVM\", acc_svc)\n",
+    "\n",
+    "# Random Forest\n",
+    "\n",
+    "random_forest = RandomForestClassifier(n_estimators=100)\n",
+    "random_forest.fit(X_train, Y_train)\n",
+    "Y_pred = random_forest.predict(X_test)\n",
+    "random_forest.score(X_train, Y_train)\n",
+    "acc_random_forest = accuracy_score(Y_test, Y_pred)\n",
+    "print (\"Random Forest\", acc_random_forest)\n",
+    "\n",
+    "# Decision Tree\n",
+    "\n",
+    "decision_tree = DecisionTreeClassifier()\n",
+    "decision_tree.fit(X_train, Y_train)\n",
+    "Y_pred = decision_tree.predict(X_test)\n",
+    "acc_decision_tree = accuracy_score(Y_test, Y_pred)\n",
+    "print (\"Decision Tree\", acc_decision_tree)\n",
+    "\n",
+    "# Stochastic Gradient Descent\n",
+    "\n",
+    "sgd = SGDClassifier()\n",
+    "sgd.fit(X_train, Y_train)\n",
+    "Y_pred = sgd.predict(X_test)\n",
+    "acc_sgd = accuracy_score(Y_test, Y_pred)\n",
+    "print (\"Stochastic Gradient Descent\", acc_sgd)\n",
+    "\n",
+    "# Linear SVC\n",
+    "\n",
+    "linear_svc = LinearSVC()\n",
+    "linear_svc.fit(X_train, Y_train)\n",
+    "Y_pred = linear_svc.predict(X_test)\n",
+    "acc_linear_svc = accuracy_score(Y_test, Y_pred)\n",
+    "print (\"Linear SVC\", acc_linear_svc)\n",
+    "\n",
+    "# Perceptron\n",
+    "\n",
+    "perceptron = Perceptron()\n",
+    "perceptron.fit(X_train, Y_train)\n",
+    "Y_pred = perceptron.predict(X_test)\n",
+    "acc_perceptron = accuracy_score(Y_test, Y_pred)\n",
+    "print (\"Perceptron\", acc_perceptron)\n",
+    "\n",
+    "# Gaussian Naive Bayes\n",
+    "\n",
+    "gaussian = GaussianNB()\n",
+    "gaussian.fit(X_train, Y_train)\n",
+    "Y_pred = gaussian.predict(X_test)\n",
+    "acc_gaussian = accuracy_score(Y_test, Y_pred)\n",
+    "print (\"Gaussian Naive Bayes\", acc_gaussian)\n",
+    "\n",
+    "# K NN\n",
+    "knn = KNeighborsClassifier(n_neighbors = 3)\n",
+    "knn.fit(X_train, Y_train)\n",
+    "Y_pred = knn.predict(X_test)\n",
+    "acc_knn = accuracy_score(Y_test, Y_pred)\n",
+    "print (\"K-NN\", acc_knn)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -1452,8 +1559,7 @@
     }
    ],
    "source": [
-    "# Define target variable \n",
-    "y = data['total_cases']\n",
+    "\n",
     "\n",
     "# First split the data_frame into training set and test set; 80-20 split.\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(data, y, test_size = 0.2)\n",
