--- a/DENG-AI.ipynb
+++ b/DENG-AI.ipynb
@@ -1545,8 +1545,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It looks that Gaussian Naive Bayes and Decision Tree work really well. Therefore we will try these models on the reduced data sets. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1559,9 +1566,8 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# First split the data_frame into training set and test set; 80-20 split.\n",
+    "y = data['total_cases']\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(data, y, test_size = 0.2)\n",
     "print (X_train.shape, Y_train.shape)\n",
     "print (X_test.shape, Y_test.shape)\n"
@@ -1569,121 +1575,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.16607773851590105"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "logreg = LogisticRegression()\n",
-    "logreg.fit(X_train, Y_train)\n",
-    "Y_pred = logreg.predict(X_test)\n",
-    "acc_log = accuracy_score(Y_test, Y_pred)\n",
-    "acc_log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.06713780918727916"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Support Vector Machines\n",
-    "svc = SVC()\n",
-    "svc.fit(X_train, Y_train)\n",
-    "Y_pred = svc.predict(X_test)\n",
-    "acc_svc = accuracy_score(Y_test, Y_pred)\n",
-    "acc_svc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.07420494699646643"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Random Forest\n",
-    "\n",
-    "random_forest = RandomForestClassifier(n_estimators=100)\n",
-    "random_forest.fit(X_train, Y_train)\n",
-    "Y_pred = random_forest.predict(X_test)\n",
-    "random_forest.score(X_train, Y_train)\n",
-    "acc_random_forest = accuracy_score(Y_test, Y_pred)\n",
-    "acc_random_forest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0989399293286219\n",
-      "0.10954063604240283\n",
-      "0.11307420494699646\n"
+      "Gaussian Naive Bayes 0.9399293286219081\n"
      ]
     }
    ],
    "source": [
-    "# Since these predictions are pretty shit, we try out with fewer variables.\n",
-    "new_data = data[['city','year','weekofyear','reanalysis_avg_temp_k', 'reanalysis_min_air_temp_k', \\\n",
-    "                 'reanalysis_dew_point_temp_k']].copy()\n",
+    "# Gaussian Naive Bayes\n",
     "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(new_data, y, test_size = 0.2)\n",
+    "gaussian = GaussianNB()\n",
+    "gaussian.fit(X_train, Y_train)\n",
+    "Y_pred = gaussian.predict(X_test)\n",
+    "acc_gaussian = accuracy_score(Y_test, Y_pred)\n",
+    "print (\"Gaussian Naive Bayes\", acc_gaussian)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree 0.9469964664310954\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Decision Tree\n",
     "\n",
-    "# Support Vector Machines\n",
-    "svc = SVC()\n",
-    "svc.fit(X_train, Y_train)\n",
-    "Y_pred = svc.predict(X_test)\n",
-    "acc_svc = accuracy_score(Y_test, Y_pred)\n",
-    "print (acc_svc)\n",
-    "\n",
-    "random_forest = RandomForestClassifier(n_estimators=100)\n",
-    "random_forest.fit(X_train, Y_train)\n",
-    "Y_pred = random_forest.predict(X_test)\n",
-    "random_forest.score(X_train, Y_train)\n",
-    "acc_random_forest = accuracy_score(Y_test, Y_pred)\n",
-    "print (acc_random_forest)\n",
-    "\n",
-    "logreg = LogisticRegression()\n",
-    "logreg.fit(X_train, Y_train)\n",
-    "Y_pred = logreg.predict(X_test)\n",
-    "acc_log = accuracy_score(Y_test, Y_pred)\n",
-    "print(acc_log)"
+    "decision_tree = DecisionTreeClassifier()\n",
+    "decision_tree.fit(X_train, Y_train)\n",
+    "Y_pred = decision_tree.predict(X_test)\n",
+    "acc_decision_tree = accuracy_score(Y_test, Y_pred)\n",
+    "print (\"Decision Tree\", acc_decision_tree)\n"
    ]
   },
   {
