Corrected the Error

--- a/DENG-AI.ipynb
+++ b/DENG-AI.ipynb
@@ -778,7 +778,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x5f061f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x63e5850>"
       ]
      },
      "execution_count": 6,
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,22 +1439,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Log-reg 0.14583333333333334\n",
+      "Log-reg 0.10416666666666667\n",
       "SVM 0.07916666666666666\n",
-      "Random Forest 0.37916666666666665\n",
-      "Decision Tree 0.9208333333333333\n",
-      "Stochastic Gradient Descent 0.025\n",
-      "Linear SVC 0.03333333333333333\n",
-      "Perceptron 0.008333333333333333\n",
-      "Gaussian Naive Bayes 0.9166666666666666\n",
-      "K-NN 0.1\n"
+      "Random Forest 0.12083333333333333\n",
+      "Decision Tree 0.075\n",
+      "Stochastic Gradient Descent 0.041666666666666664\n",
+      "Linear SVC 0.0\n",
+      "Perceptron 0.0\n",
+      "Gaussian Naive Bayes 0.0625\n",
+      "K-NN 0.06666666666666667\n"
      ]
     }
    ],
@@ -1469,6 +1469,10 @@
     "full_data = full_data.replace('iq', 1)\n",
     "full_data = full_data.drop('week_start_date', 1)\n",
     "y = full_data['total_cases']\n",
+    "\n",
+    "full_data = full_data.drop('total_cases', 1)\n",
+    "\n",
+    "\n",
     "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(full_data, y, test_size = 0.2)\n",
     "\n",
@@ -1548,26 +1552,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It looks that Gaussian Naive Bayes and Decision Tree work really well. Therefore we will try these models on the reduced data sets. "
+    "This is really bad. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1131, 16) (1131,)\n",
-      "(283, 16) (283,)\n"
+      "(1131, 12) (1131,)\n",
+      "(283, 12) (283,)\n"
      ]
     }
    ],
    "source": [
     "# First split the data_frame into training set and test set; 80-20 split.\n",
     "y = data['total_cases']\n",
+    "\n",
+    "data = data.drop('total_cases', 1)\n",
+    "data = data.drop('city', 1)\n",
+    "data = data.drop('year', 1)\n",
+    "data = data.drop('weekofyear', 1)\n",
+    "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(data, y, test_size = 0.2)\n",
     "print (X_train.shape, Y_train.shape)\n",
     "print (X_test.shape, Y_test.shape)\n"
@@ -1575,14 +1585,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ndvi_se</th>\n",
+       "      <th>precipitation_amt_mm</th>\n",
+       "      <th>reanalysis_avg_temp_k</th>\n",
+       "      <th>reanalysis_dew_point_temp_k</th>\n",
+       "      <th>reanalysis_max_air_temp_k</th>\n",
+       "      <th>reanalysis_min_air_temp_k</th>\n",
+       "      <th>reanalysis_precip_amt_kg_per_m2</th>\n",
+       "      <th>reanalysis_relative_humidity_percent</th>\n",
+       "      <th>reanalysis_sat_precip_amt_mm</th>\n",
+       "      <th>reanalysis_specific_humidity_g_per_kg</th>\n",
+       "      <th>reanalysis_tdtr_k</th>\n",
+       "      <th>station_precip_mm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.198483</td>\n",
+       "      <td>12.42</td>\n",
+       "      <td>297.742857</td>\n",
+       "      <td>292.414286</td>\n",
+       "      <td>299.8</td>\n",
+       "      <td>295.9</td>\n",
+       "      <td>32.00</td>\n",
+       "      <td>73.365714</td>\n",
+       "      <td>12.42</td>\n",
+       "      <td>14.012857</td>\n",
+       "      <td>2.628571</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.162357</td>\n",
+       "      <td>22.82</td>\n",
+       "      <td>298.442857</td>\n",
+       "      <td>293.951429</td>\n",
+       "      <td>300.9</td>\n",
+       "      <td>296.4</td>\n",
+       "      <td>17.94</td>\n",
+       "      <td>77.368571</td>\n",
+       "      <td>22.82</td>\n",
+       "      <td>15.372857</td>\n",
+       "      <td>2.371429</td>\n",
+       "      <td>8.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.157200</td>\n",
+       "      <td>34.54</td>\n",
+       "      <td>298.878571</td>\n",
+       "      <td>295.434286</td>\n",
+       "      <td>300.5</td>\n",
+       "      <td>297.3</td>\n",
+       "      <td>26.10</td>\n",
+       "      <td>82.052857</td>\n",
+       "      <td>34.54</td>\n",
+       "      <td>16.848571</td>\n",
+       "      <td>2.300000</td>\n",
+       "      <td>41.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.227557</td>\n",
+       "      <td>15.36</td>\n",
+       "      <td>299.228571</td>\n",
+       "      <td>295.310000</td>\n",
+       "      <td>301.4</td>\n",
+       "      <td>297.0</td>\n",
+       "      <td>13.90</td>\n",
+       "      <td>80.337143</td>\n",
+       "      <td>15.36</td>\n",
+       "      <td>16.672857</td>\n",
+       "      <td>2.428571</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.251200</td>\n",
+       "      <td>7.52</td>\n",
+       "      <td>299.664286</td>\n",
+       "      <td>295.821429</td>\n",
+       "      <td>301.9</td>\n",
+       "      <td>297.5</td>\n",
+       "      <td>12.20</td>\n",
+       "      <td>80.460000</td>\n",
+       "      <td>7.52</td>\n",
+       "      <td>17.210000</td>\n",
+       "      <td>3.014286</td>\n",
+       "      <td>5.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ndvi_se  precipitation_amt_mm  reanalysis_avg_temp_k  \\\n",
+       "0  0.198483                 12.42             297.742857   \n",
+       "1  0.162357                 22.82             298.442857   \n",
+       "2  0.157200                 34.54             298.878571   \n",
+       "3  0.227557                 15.36             299.228571   \n",
+       "4  0.251200                  7.52             299.664286   \n",
+       "\n",
+       "   reanalysis_dew_point_temp_k  reanalysis_max_air_temp_k  \\\n",
+       "0                   292.414286                      299.8   \n",
+       "1                   293.951429                      300.9   \n",
+       "2                   295.434286                      300.5   \n",
+       "3                   295.310000                      301.4   \n",
+       "4                   295.821429                      301.9   \n",
+       "\n",
+       "   reanalysis_min_air_temp_k  reanalysis_precip_amt_kg_per_m2  \\\n",
+       "0                      295.9                            32.00   \n",
+       "1                      296.4                            17.94   \n",
+       "2                      297.3                            26.10   \n",
+       "3                      297.0                            13.90   \n",
+       "4                      297.5                            12.20   \n",
+       "\n",
+       "   reanalysis_relative_humidity_percent  reanalysis_sat_precip_amt_mm  \\\n",
+       "0                             73.365714                         12.42   \n",
+       "1                             77.368571                         22.82   \n",
+       "2                             82.052857                         34.54   \n",
+       "3                             80.337143                         15.36   \n",
+       "4                             80.460000                          7.52   \n",
+       "\n",
+       "   reanalysis_specific_humidity_g_per_kg  reanalysis_tdtr_k  station_precip_mm  \n",
+       "0                              14.012857           2.628571               16.0  \n",
+       "1                              15.372857           2.371429                8.6  \n",
+       "2                              16.848571           2.300000               41.4  \n",
+       "3                              16.672857           2.428571                4.0  \n",
+       "4                              17.210000           3.014286                5.8  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gaussian Naive Bayes 0.9399293286219081\n"
+      "Gaussian Naive Bayes 0.053003533568904596\n"
      ]
     }
    ],
@@ -1592,20 +1768,69 @@
     "gaussian = GaussianNB()\n",
     "gaussian.fit(X_train, Y_train)\n",
     "Y_pred = gaussian.predict(X_test)\n",
-    "acc_gaussian = accuracy_score(Y_test, Y_pred)\n",
+    "acc_gaussian = accuracy_score(Y_test.tolist(), Y_pred)\n",
     "print (\"Gaussian Naive Bayes\", acc_gaussian)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decision Tree 0.9469964664310954\n"
+      "[ 85  41   2  24 127  75   0  24   0  85  27  47  24   0   0  51  47  46\n",
+      "  70  24  50  85   0   5   1  51  85  75  71  85  50  65  75  51  24  43\n",
+      "  68  24   0  85  17   1  45   2  62   0  24   0   0   0 127  85  17   1\n",
+      "   0  30   4   0  85   2  24  68   0  62   0  24   1   2   0   0   0  37\n",
+      "   5  61  42   0   0   1  85  61  24   0  20  85  48  36   5  64  43   0\n",
+      "  24  27  36  48  24  43   1   5   2   0  51   1   0   0  85  68  64  24\n",
+      "   0   1  61   1   5  65  67   2  17   0  24  24  85  89  51  68  67  67\n",
+      "   1   0  36   0   5 127  37   0  50  10   0  24   0  68  49  36  51  27\n",
+      "   3  65 106  75  75  67  65   0  67  75 106   1   0  26  31  27  85   2\n",
+      "  24  47  47  70  40   2  25  75  75  75   1  65  43  65  65   5   2 127\n",
+      "  68   0  68  24  20  24   0  24  65  48  75   0 129   0  24  70  85   0\n",
+      "  68  24  68  70  24   0   0  64  37  46  24  24  24   0 106   0 129   5\n",
+      "  70   5   0  51  85  31  51  85  36   0  24  30   1   2  85  50   0   2\n",
+      "   0  26 106  17  68   1  54  24  51  89  51  85   0  37   0   0  40  50\n",
+      "   2  24   2   0   0   1  40  43   2  43  61   1  47  51  67  24  51  68\n",
+      "   0  50  20   0   1  65  49   1  24   0  75  33   5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[70, 11, 20, 4, 140, 4, 5, 12, 5, 10, 15, 15, 8, 1, 0, 66, 7, 1, 44, 91, 8, 12, 2, 23, 0, 46, 7, 21, 23, 60, 12, 20, 5, 55, 24, 48, 27, 6, 6, 22, 14, 2, 83, 1, 10, 0, 25, 4, 1, 25, 92, 21, 4, 0, 17, 3, 2, 63, 2, 14, 14, 43, 5, 36, 1, 15, 1, 12, 6, 3, 12, 18, 2, 36, 19, 2, 0, 7, 38, 4, 1, 3, 3, 26, 21, 6, 5, 15, 55, 0, 21, 30, 14, 67, 17, 99, 10, 18, 2, 11, 14, 8, 0, 3, 38, 89, 102, 13, 4, 5, 10, 3, 3, 76, 116, 1, 23, 1, 78, 19, 17, 12, 6, 12, 18, 35, 25, 9, 2, 0, 11, 18, 4, 1, 3, 1, 1, 3, 0, 84, 60, 30, 14, 24, 8, 112, 5, 40, 82, 10, 15, 31, 38, 4, 92, 26, 9, 23, 32, 12, 28, 10, 8, 38, 17, 16, 23, 44, 137, 21, 112, 72, 9, 20, 61, 11, 3, 22, 13, 33, 1, 4, 7, 13, 30, 6, 1, 17, 8, 44, 13, 3, 17, 0, 5, 40, 1, 0, 13, 40, 20, 7, 9, 1, 12, 48, 18, 63, 12, 2, 3, 28, 6, 5, 56, 0, 12, 6, 6, 42, 34, 18, 52, 59, 22, 4, 11, 154, 3, 4, 13, 6, 0, 9, 8, 27, 71, 5, 25, 11, 5, 4, 60, 39, 76, 7, 6, 3, 24, 7, 1, 2, 7, 23, 1, 5, 16, 2, 5, 8, 7, 31, 55, 11, 3, 68, 140, 27, 19, 44, 0, 26, 10, 4, 9, 5, 35, 2, 6, 5, 5, 40, 35]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y_test.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree 0.03180212014134275\n"
      ]
     }
    ],
@@ -1617,6 +1842,13 @@
     "Y_pred = decision_tree.predict(X_test)\n",
     "acc_decision_tree = accuracy_score(Y_test, Y_pred)\n",
     "print (\"Decision Tree\", acc_decision_tree)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate Predictions for the Test Cases"
    ]
   },
   {
